OpenShift compatible docker image