@@ -1,3 +1,4 @@
+import com.typesafe.sbt.packager.docker.{Cmd, ExecCmd}
 import Dependencies._
 
 lazy val root = (project in file("."))
@@ -14,5 +15,17 @@ lazy val root = (project in file("."))
       "com.typesafe.akka" %% "akka-stream-kafka" % "0.22",
       scalaTest % Test
     ),
-    dockerUsername := Some("seglo")
+    dockerUsername := Some("seglo"),
+    // Based on best practices found in OpenShift Creating images guidelines
+    // https://docs.openshift.com/container-platform/3.10/creating_images/guidelines.html
+    dockerCommands := Seq(
+      Cmd("FROM",           "centos:7"),
+      Cmd("RUN",            "yum -y install java-1.8.0-openjdk-headless && yum clean all -y"),
+      Cmd("RUN",            "useradd -r -m -u 1001 -g 0 kafkaslowconsumer"),
+      Cmd("ADD",            "opt /opt"),
+      Cmd("RUN",            "chgrp -R 0 /opt && chmod -R g=u /opt"),
+      Cmd("WORKDIR",        "/opt/docker"),
+      Cmd("USER",           "1001"),
+      ExecCmd("CMD",        "/opt/docker/bin/kafka-slow-consumer", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap")
+    )
   )
